--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 	"type": "library",
 	"keywords": [
 		"rangine",
-		"lang"
+		"lang",
+		"translator"
 	],
 	"license": "Apache-2.0",
 	"require": {
